--- a/Lesson14.1.html
+++ b/Lesson14.1.html
@@ -26,7 +26,7 @@
         <nav class="top__navigation navigation">
           <a class="navigation__button" href="#">HOME</a>
           <a class="navigation__button" href="#about">ABOUT</a>
-          <a class="navigation__button" href="#">SERVICES</a>
+          <a class="navigation__button" href="#services">SERVICES</a>
           <a class="navigation__button" href="#">GALLERY</a>
           <a class="navigation__button" href="#blog">BLOG</a>
           <a class="navigation__button" href="#contact">CONTACT</a>
@@ -56,7 +56,33 @@
     </div>
 
   </section>
-
+  <!-- ______________________________Services______________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <section class="services" id="services">
+    <div class="left__icons">
+      <div>
+        <div> Online Shopping</div>
+        <img src="./Foto/icon1.png" alt="icon">
+      </div>
+      <div>
+        <div> Quality Product</div>
+        <img src="./Foto/icon2.png" alt="icon">
+      </div>
+      <div>
+        <div> Domestic & International Delivery</div>
+        <img src="./Foto/icon3.png" alt="icon">
+      </div>
+      <div>
+        <div> Well Ozganized</div>
+        <img src="./Foto/icon4.png" alt="icon">
+      </div>
+    </div>
+    <div class="right__head">Our Services</div>
+  </section>
+  <!-- ______________________________Blog______________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
   <section class="blog" id="blog">
     <div class="blog__container">
       <div class="blog__head">Blog</div>
