--- a/Lesson14.2.html
+++ b/Lesson14.2.html
@@ -23,14 +23,18 @@
             <div class="right--line"></div>
         </div>
         <div class="container__middle">
+            <div class="middle--left left">
+                <div class="arrow--left"></div>
 
-            <div class="image-wrapper">
-                <div class="image-inner">
-                    <img src="./Foto/Foto_eng.png">
+                <div class="image--left">
+                    <div class="image-inner">
+                        <img src="./Foto/Foto_eng.png">
+                    </div>
                 </div>
             </div>
-            <div class="middle--line"></div>
-            <div class="middle--text"></div>
+            <div class="middle--right">
+                <div class="middle--text"></div>
+            </div>
         </div>
     </div>
 </body>
