--- a/Lesson14.1.html
+++ b/Lesson14.1.html
@@ -60,25 +60,25 @@
   <!-- ___________________________________________________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
   <section class="services" id="services">
-    <div class="left__icons">
-      <div>
+    <div class="left__icons icon">
+      <div class="icon1">
         <div> Online Shopping</div>
         <img src="./Foto/icon1.png" alt="icon">
       </div>
-      <div>
+      <div class="icon2">
         <div> Quality Product</div>
         <img src="./Foto/icon2.png" alt="icon">
       </div>
-      <div>
+      <div class="icon3">
         <div> Domestic & International Delivery</div>
-        <img src="./Foto/icon3.png" alt="icon">
+        <img src=" ./Foto/icon3.png" alt="icon">
       </div>
-      <div>
+      <div class="icon4">
         <div> Well Ozganized</div>
         <img src="./Foto/icon4.png" alt="icon">
       </div>
     </div>
-    <div class="right__head">Our Services</div>
+    <div class="right__text">Our Services</div>
   </section>
   <!-- ______________________________Blog______________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
