--- a/Lesson14.2.html
+++ b/Lesson14.2.html
@@ -9,7 +9,7 @@
     <title>SaSSSS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Roboto:wght@900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -32,8 +32,19 @@
                     </div>
                 </div>
             </div>
-            <div class="middle--right">
-                <div class="middle--text"></div>
+            <div class="middle--right right">
+                <div class="right--text">
+                    <div class="text--head">Sahariar Kabir</div>
+                    <div class="text--searator"></div>
+                    <div class="text--function">Frontend Developer</div>
+                    <div class="text--icons"></div>
+                    <div class="text--main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit
+                        amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut
+                        euismod lacus placerat. Praesent rutrum eget massa a convallis.
+                        Nam vitae augue malesuada, accumsan mauris ut, consectetur.</div>
+
+                </div>
+
             </div>
         </div>
     </div>
