--- a/Lesson14.2.html
+++ b/Lesson14.2.html
@@ -9,7 +9,8 @@
     <title>SaSSSS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@400;500&family=Roboto:wght@900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -42,10 +43,20 @@
                         amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut
                         euismod lacus placerat. Praesent rutrum eget massa a convallis.
                         Nam vitae augue malesuada, accumsan mauris ut, consectetur.</div>
-
+                    <div class="text--footerline">
+                        <div class="footerline1"></div>
+                        <div class="footerline2"></div>
+                        <div class="footerline3"></div>
+                    </div>
+                    <button class="text--button">VIEW PROFILE</button>
                 </div>
-
+                <div class="arrow--right"></div>
             </div>
+        </div>
+        <div class="container__footer">
+            <div class="footer--circle1"></div>
+            <div class="footer--circle2"></div>
+            <div class="footer--circle3"></div>
         </div>
     </div>
 </body>
