--- a/Lesson14.2.html
+++ b/Lesson14.2.html
@@ -12,6 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@400;500&family=Roboto:wght@900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -38,7 +40,22 @@
                     <div class="text--head">Sahariar Kabir</div>
                     <div class="text--searator"></div>
                     <div class="text--function">Frontend Developer</div>
-                    <div class="text--icons"></div>
+                    <div class="text--icons">
+                        <div class="facebook">
+                            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        </div>
+
+                        <div class="twitter">
+                            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </div>
+                        <div class="google-pluse">
+                            <a href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                        </div>
+                        <div class="linkedin">
+                            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+
+                    </div>
                     <div class="text--main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit
                         amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut
                         euismod lacus placerat. Praesent rutrum eget massa a convallis.
