--- a/Lesson14.2.html
+++ b/Lesson14.2.html
@@ -27,7 +27,7 @@
         </div>
         <div class="container__middle">
             <div class="middle--left left">
-                <div class="arrow--left"></div>
+                <div class="arrow--left"><i class="fas fa-chevron-left"></i></div>
 
                 <div class="image--left">
                     <div class="image-inner">
@@ -67,13 +67,13 @@
                     </div>
                     <button class="text--button">VIEW PROFILE</button>
                 </div>
-                <div class="arrow--right"></div>
+                <div class="arrow--right"><i class="fas fa-chevron-right"></i></div>
             </div>
         </div>
         <div class="container__footer">
-            <div class="footer--circle1"></div>
-            <div class="footer--circle2"></div>
-            <div class="footer--circle3"></div>
+            <i class="fas fa-circle"></i>
+            <div class="footer__circle--center"><i class="far fa-circle"></i></div>
+            <i class="fas fa-circle"></i>
         </div>
     </div>
 </body>
