--- a/Lesson14.1.html
+++ b/Lesson14.1.html
@@ -41,44 +41,49 @@
       <div class="header__scroll"><img src="Foto/scroll.png" alt="scroll" width="24" /></div>
     </div>
   </section>
-
+  <!-- ______________________________About US______________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
   <section class="about" id="about">
-    <div class="about__head">About Us</div>
-    <div class="about__text">
-      Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud
-      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
-      <div class="about__text--bottom">
-        Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error
-        sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-        eaque ipsa quae ab illo inventore.
+    <div class="about__conteiner">
+      <div class="about__head">About Us</div>
+      <div class="about__text">
+        Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud
+        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+        <div class="about__text--bottom">
+          Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error
+          sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+          eaque ipsa quae ab illo inventore.
+        </div>
       </div>
     </div>
-
   </section>
   <!-- ______________________________Services______________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
   <section class="services" id="services">
-    <div class="left__icons icon">
-      <div class="icon1">
-        <div> Online Shopping</div>
-        <img src="./Foto/icon1.png" alt="icon">
+    <div class="services__conteiner">
+      <div class="left__icons icon">
+        <div class="icon1">
+          <div> Online Shopping</div>
+          <img src="./Foto/icon1.png" alt="icon">
+        </div>
+        <div class="icon2">
+          <div> Quality Product</div>
+          <img src="./Foto/icon2.png" alt="icon">
+        </div>
+        <div class="icon3">
+          <div> Domestic & International Delivery</div>
+          <img src=" ./Foto/icon3.png" alt="icon">
+        </div>
+        <div class="icon4">
+          <div> Well Ozganized</div>
+          <img src="./Foto/icon4.png" alt="icon">
+        </div>
       </div>
-      <div class="icon2">
-        <div> Quality Product</div>
-        <img src="./Foto/icon2.png" alt="icon">
-      </div>
-      <div class="icon3">
-        <div> Domestic & International Delivery</div>
-        <img src=" ./Foto/icon3.png" alt="icon">
-      </div>
-      <div class="icon4">
-        <div> Well Ozganized</div>
-        <img src="./Foto/icon4.png" alt="icon">
-      </div>
+      <div class="right__text">Our Services</div>
     </div>
-    <div class="right__text">Our Services</div>
   </section>
   <!-- ______________________________Blog______________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
