--- a/Lesson14.1.html
+++ b/Lesson14.1.html
@@ -27,7 +27,7 @@
           <a class="navigation__button" href="#">HOME</a>
           <a class="navigation__button" href="#about">ABOUT</a>
           <a class="navigation__button" href="#services">SERVICES</a>
-          <a class="navigation__button" href="#">GALLERY</a>
+          <a class="navigation__button" href="#gallery">GALLERY</a>
           <a class="navigation__button" href="#blog">BLOG</a>
           <a class="navigation__button" href="#contact">CONTACT</a>
         </nav>
@@ -85,6 +85,33 @@
       <div class="right__text">Our Services</div>
     </div>
   </section>
+  <!-- ______________________________Gallery______________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <section class="gallery" id="gallery">
+    <div class="gallery__container">
+      <div class="gallery__head">Gallery</div>
+      <div class="gallery__text">
+        Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </div>
+      <div class="gallery__images images">
+        <div class="images--line1">
+          <div class="line1--img1"></div>
+          <div class="line1--img2">
+            <div class="img2_1"></div>
+            <div class="img2_2"></div>
+          </div>
+        </div>
+        <div class="images--line2">
+          <div class="line2--img1"></div>
+          <div class="line2--img2"></div>
+        </div>
+      </div>
+      <button class="gallery__button">VIEW MORE</button>
+    </div>
+  </section>
+
   <!-- ______________________________Blog______________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
