--- a/Lesson14.1.html
+++ b/Lesson14.1.html
@@ -111,6 +111,16 @@
       <button class="gallery__button">VIEW MORE</button>
     </div>
   </section>
+  <!-- ______________________________Subscribe______________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <!-- ___________________________________________________________________________________ -->
+  <section class="subscribe">
+    <div class="subscribe__container">
+      <div class="subscribe__head">Subscribe To Us</div>
+      <div class="subscribe__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+        labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+    </div>
+  </section>
 
   <!-- ______________________________Blog______________________________________________ -->
   <!-- ___________________________________________________________________________________ -->
