--- a/Lesson14.1.html
+++ b/Lesson14.1.html
@@ -119,6 +119,10 @@
       <div class="subscribe__head">Subscribe To Us</div>
       <div class="subscribe__text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+      <div class="subscribe--form">
+        <input type="text" placeholder="Your email address..." name="email" required autocomplete="off">
+        <button type="subscribe" class="button--subscribe">SUBSCRIBE</button>
+      </div>
     </div>
   </section>
 
